[gd_scene load_steps=5 format=3 uid="uid://o7ms6nil7dwq"]

[ext_resource type="Script" path="res://scenes/ui/inventory/item_interaction.gd" id="1_1n33t"]
[ext_resource type="Texture2D" uid="uid://bmccnd514bgbc" path="res://icon.svg" id="1_mbiye"]
[ext_resource type="PackedScene" uid="uid://dqafjxxiadcpx" path="res://scenes/ui/displayes/property_display.tscn" id="2_kudu4"]
[ext_resource type="PackedScene" uid="uid://bubcdtv7x4qvn" path="res://scenes/ui/inventory/slot_display.tscn" id="3_n80k8"]

[node name="ItemInteraction" type="PanelContainer"]
script = ExtResource("1_1n33t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PropertyContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PropertyDisplay1" parent="MarginContainer/VBoxContainer/PropertyContainer" instance=ExtResource("2_kudu4")]
layout_mode = 2

[node name="PropertyDisplay2" parent="MarginContainer/VBoxContainer/PropertyContainer" instance=ExtResource("2_kudu4")]
visible = false
layout_mode = 2

[node name="PropertyDisplay3" parent="MarginContainer/VBoxContainer/PropertyContainer" instance=ExtResource("2_kudu4")]
visible = false
layout_mode = 2

[node name="PropertyDisplay4" parent="MarginContainer/VBoxContainer/PropertyContainer" instance=ExtResource("2_kudu4")]
visible = false
layout_mode = 2

[node name="ItemsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ItemsContainer"]
layout_mode = 2

[node name="SlotDisplay" parent="MarginContainer/VBoxContainer/ItemsContainer/GridContainer" instance=ExtResource("3_n80k8")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ItemsContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_mbiye")
expand_mode = 1
stretch_mode = 5

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/VBoxContainer/ItemsContainer"]
layout_mode = 2

[node name="SlotDisplay2" parent="MarginContainer/VBoxContainer/ItemsContainer/GridContainer2" instance=ExtResource("3_n80k8")]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "use"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
